--- a/src/structure/options.html.in
+++ b/src/structure/options.html.in
@@ -169,6 +169,7 @@
                      <div class="input-group input-group-sm">
                         <label class="input-group-text" for="env-bg-color">color</label>
                         <select id="env-bg-color" class="form-select">
+                           <option value="prop">prop</option>
                            <option value="CPK">CPK</option>
                            <option value="grey">grey</option>
                         </select>
